# pushover-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
libs/aiogram-broadcast/: README.md  pyproject.toml  requirements.txt
libs/aiogram-broadcast/aiogram_broadcast/: __init__.py  exceptions.py  middleware.py  models.py  scheduler.py  service.py
libs/aiogram-broadcast/aiogram_broadcast/storage/: __init__.py  base.py  redis.py
libs/aiogram-broadcast/aiogram_broadcast/ui/: __init__.py  handlers.py  keyboards.py  manager.py  middleware.py  states.py  texts.py  utils.py
migrations/: 001_initial.sql  002_language_updates.sql  003_archive.sql  004_username.sql
scripts/: deploy.sh  export.sh  export_archive.py
src/: config.py  main.py
src/bot/: commands.py
src/bot/filters/: __init__.py  chat_type.py
src/bot/handlers/: __init__.py  admin.py  common.py  events.py  group.py  private.py
src/bot/keyboards/: __init__.py  inline.py
src/bot/middlewares/: __init__.py  archive.py  fsm_cancel.py  i18n.py  throttling.py  user.py
src/db/: database.py  models.py
src/db/repositories/: __init__.py  group.py  notification_log.py  subscription.py  user.py
src/i18n/: __init__.py  loader.py
src/i18n/locales/: en.yaml  ru.yaml  uk.yaml
src/services/: __init__.py  broadcast.py  notification.py  pushover.py
