[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiogram-broadcast"
version = "0.1.0"
description = "Broadcast/newsletter library for aiogram 3.x"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "aiogram",
    "telegram",
    "bot",
    "broadcast",
    "newsletter",
    "mailing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]

dependencies = [
    "aiogram>=3.0.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
scheduler = [
    "apscheduler>=3.10.0",
]
ui = [
    "apscheduler>=3.10.0",
]
all = [
    "apscheduler>=3.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/aiogram-broadcast"
Repository = "https://github.com/yourusername/aiogram-broadcast"
Documentation = "https://github.com/yourusername/aiogram-broadcast#readme"

[tool.hatch.build.targets.wheel]
packages = ["aiogram_broadcast"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
